# opalite

./: README.md  pyproject.toml  requirements.txt
src/opalite/: singlecell.py
