[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Opalite"
version = "0.1.0"
authors = [
  { name="Daniel Kiss", email="kissdanieldezso@gmail.com" },
]
description = "Toolkit for single-cell and spatial transcriptomics analysis and visualization"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]