[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Opalite"
version = "0.1.0"
authors = [
  { name="Daniel Kiss", email="kissdanieldezso@gmail.com" },
]
description = "Toolkit for single-cell and spatial transcriptomics analysis and visualization"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
	"anndata==0.12.10",
	"matplotlib==3.10.8",
	"numpy==2.3.5",
	"pandas==2.3.3",
	"scanpy==1.12.1",
	"scipy==1.17.1",
	"spatialdata==0.7.2",
	"spatialdata-io==0.6.0",
	"spatialdata-plot==0.3.3",
	"squidpy==1.8.1"
]

[tool.setuptools.packages.find]
where = ["src"]